y.output

state 0
	$accept: .program $end 

	LPAREN  shift 2
	.  error

	program  goto 1

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  LPAREN.LABEL subProgram RPAREN 

	LABEL  shift 3
	.  error


state 3
	program:  LPAREN LABEL.subProgram RPAREN 

	LPAREN  shift 6
	.  error

	subProgram  goto 4
	func  goto 5

state 4
	program:  LPAREN LABEL subProgram.RPAREN 

	RPAREN  shift 7
	.  error


state 5
	subProgram:  func.    (2)
	subProgram:  func.subProgram 

	LPAREN  shift 6
	.  reduce 2 (src line 38)

	subProgram  goto 8
	func  goto 5

state 6
	func:  LPAREN.LABEL nat nat subFunc RPAREN 

	LABEL  shift 9
	.  error


state 7
	program:  LPAREN LABEL subProgram RPAREN.    (1)

	.  reduce 1 (src line 31)


state 8
	subProgram:  func subProgram.    (3)

	.  reduce 3 (src line 43)


state 9
	func:  LPAREN LABEL.nat nat subFunc RPAREN 

	NAT  shift 11
	NAT6  shift 12
	N8  shift 13
	.  error

	nat  goto 10

state 10
	func:  LPAREN LABEL nat.nat subFunc RPAREN 

	NAT  shift 11
	NAT6  shift 12
	N8  shift 13
	.  error

	nat  goto 14

state 11
	nat:  NAT.    (44)

	.  reduce 44 (src line 208)


state 12
	nat:  NAT6.    (45)

	.  reduce 45 (src line 209)


state 13
	nat:  N8.    (46)

	.  reduce 46 (src line 210)


state 14
	func:  LPAREN LABEL nat nat.subFunc RPAREN 

	LABEL  shift 19
	LPAREN  shift 17
	.  error

	subFunc  goto 15
	instruction  goto 16
	label  goto 18

state 15
	func:  LPAREN LABEL nat nat subFunc.RPAREN 

	RPAREN  shift 20
	.  error


state 16
	subFunc:  instruction.    (5)
	subFunc:  instruction.subFunc 

	LABEL  shift 19
	LPAREN  shift 17
	.  reduce 5 (src line 57)

	subFunc  goto 21
	instruction  goto 16
	label  goto 18

state 17
	instruction:  LPAREN.innerinstruction RPAREN 

	CALL  shift 27
	CJUMP  shift 26
	TAILCALL  shift 28
	RETURN  shift 29
	GOTO  shift 25
	LPAREN  shift 32
	RCX  shift 35
	W  shift 30
	A  shift 33
	.  error

	innerinstruction  goto 22
	mem  goto 24
	w  goto 23
	a  goto 31
	sx  goto 34

state 18
	instruction:  label.    (8)

	.  reduce 8 (src line 73)


state 19
	label:  LABEL.    (50)

	.  reduce 50 (src line 217)


state 20
	func:  LPAREN LABEL nat nat subFunc RPAREN.    (4)

	.  reduce 4 (src line 50)


state 21
	subFunc:  instruction subFunc.    (6)

	.  reduce 6 (src line 62)


state 22
	instruction:  LPAREN innerinstruction.RPAREN 

	RPAREN  shift 36
	.  error


state 23
	innerinstruction:  w.ASSIGN s 
	innerinstruction:  w.ASSIGN mem 
	innerinstruction:  w.AOP t 
	innerinstruction:  w.SOP sx 
	innerinstruction:  w.SOP num 
	innerinstruction:  w.ASSIGN cmp_op 

	AOP  shift 38
	SOP  shift 39
	ASSIGN  shift 37
	.  error


state 24
	innerinstruction:  mem.ASSIGN s 

	ASSIGN  shift 40
	.  error


state 25
	innerinstruction:  GOTO.LABEL 

	LABEL  shift 41
	.  error


state 26
	innerinstruction:  CJUMP.cmp_op LABEL LABEL 

	NEG  shift 49
	NAT  shift 48
	NAT6  shift 53
	N8  shift 51
	NEGN8  shift 52
	RCX  shift 35
	X  shift 46
	W  shift 30
	A  shift 33
	.  error

	cmp_op  goto 42
	w  goto 47
	t  goto 43
	x  goto 44
	a  goto 31
	sx  goto 34
	num  goto 45
	n8  goto 50

state 27
	innerinstruction:  CALL.PRINT NAT6 
	innerinstruction:  CALL.READ NAT6 
	innerinstruction:  CALL.ALLOCATE NAT6 
	innerinstruction:  CALL.ARRAYERROR NAT6 
	innerinstruction:  CALL.u nat 

	LABEL  shift 19
	ALLOCATE  shift 56
	PRINT  shift 54
	ARRAYERROR  shift 57
	READ  shift 55
	RCX  shift 35
	W  shift 30
	A  shift 33
	.  error

	w  goto 59
	u  goto 58
	a  goto 31
	sx  goto 34
	label  goto 60

state 28
	innerinstruction:  TAILCALL.u NAT6 

	LABEL  shift 19
	RCX  shift 35
	W  shift 30
	A  shift 33
	.  error

	w  goto 59
	u  goto 61
	a  goto 31
	sx  goto 34
	label  goto 60

state 29
	innerinstruction:  RETURN.    (24)

	.  reduce 24 (src line 154)


state 30
	w:  W.    (36)

	.  reduce 36 (src line 193)


state 31
	w:  a.    (37)

	.  reduce 37 (src line 194)


state 32
	mem:  LPAREN.MEM x n8 RPAREN 

	MEM  shift 62
	.  error


state 33
	a:  A.    (38)

	.  reduce 38 (src line 197)


state 34
	a:  sx.    (39)

	.  reduce 39 (src line 198)


state 35
	sx:  RCX.    (40)

	.  reduce 40 (src line 201)


state 36
	instruction:  LPAREN innerinstruction RPAREN.    (7)

	.  reduce 7 (src line 69)


state 37
	innerinstruction:  w ASSIGN.s 
	innerinstruction:  w ASSIGN.mem 
	innerinstruction:  w ASSIGN.cmp_op 

	LABEL  shift 19
	NEG  shift 49
	NAT  shift 48
	NAT6  shift 53
	N8  shift 51
	NEGN8  shift 52
	LPAREN  shift 32
	RCX  shift 35
	X  shift 46
	W  shift 30
	A  shift 33
	.  error

	mem  goto 64
	cmp_op  goto 65
	s  goto 63
	w  goto 47
	t  goto 43
	x  goto 66
	a  goto 31
	sx  goto 34
	num  goto 67
	label  goto 68
	n8  goto 50

state 38
	innerinstruction:  w AOP.t 

	NEG  shift 49
	NAT  shift 48
	NAT6  shift 53
	N8  shift 51
	NEGN8  shift 52
	RCX  shift 35
	X  shift 46
	W  shift 30
	A  shift 33
	.  error

	w  goto 47
	t  goto 69
	x  goto 44
	a  goto 31
	sx  goto 34
	num  goto 45
	n8  goto 50

state 39
	innerinstruction:  w SOP.sx 
	innerinstruction:  w SOP.num 

	NEG  shift 49
	NAT  shift 48
	NAT6  shift 53
	N8  shift 51
	NEGN8  shift 52
	RCX  shift 35
	.  error

	sx  goto 70
	num  goto 71
	n8  goto 50

state 40
	innerinstruction:  mem ASSIGN.s 

	LABEL  shift 19
	NEG  shift 49
	NAT  shift 48
	NAT6  shift 53
	N8  shift 51
	NEGN8  shift 52
	RCX  shift 35
	X  shift 46
	W  shift 30
	A  shift 33
	.  error

	s  goto 72
	w  goto 47
	x  goto 73
	a  goto 31
	sx  goto 34
	num  goto 74
	label  goto 68
	n8  goto 50

state 41
	innerinstruction:  GOTO LABEL.    (16)

	.  reduce 16 (src line 113)


state 42
	innerinstruction:  CJUMP cmp_op.LABEL LABEL 

	LABEL  shift 75
	.  error


state 43
	cmp_op:  t.CMP t 

	CMP  shift 76
	.  error


state 44
	t:  x.    (29)

	.  reduce 29 (src line 181)


state 45
	t:  num.    (30)

	.  reduce 30 (src line 182)


state 46
	x:  X.    (34)

	.  reduce 34 (src line 189)


state 47
	x:  w.    (35)

	.  reduce 35 (src line 190)


state 48
	num:  NAT.    (41)

	.  reduce 41 (src line 203)


state 49
	num:  NEG.    (42)

	.  reduce 42 (src line 204)


state 50
	num:  n8.    (43)

	.  reduce 43 (src line 205)


state 51
	n8:  N8.    (47)

	.  reduce 47 (src line 212)


state 52
	n8:  NEGN8.    (48)

	.  reduce 48 (src line 213)


state 53
	n8:  NAT6.    (49)

	.  reduce 49 (src line 214)


state 54
	innerinstruction:  CALL PRINT.NAT6 

	NAT6  shift 77
	.  error


state 55
	innerinstruction:  CALL READ.NAT6 

	NAT6  shift 78
	.  error


state 56
	innerinstruction:  CALL ALLOCATE.NAT6 

	NAT6  shift 79
	.  error


state 57
	innerinstruction:  CALL ARRAYERROR.NAT6 

	NAT6  shift 80
	.  error


state 58
	innerinstruction:  CALL u.nat 

	NAT  shift 11
	NAT6  shift 12
	N8  shift 13
	.  error

	nat  goto 81

state 59
	u:  w.    (27)

	.  reduce 27 (src line 177)


state 60
	u:  label.    (28)

	.  reduce 28 (src line 178)


state 61
	innerinstruction:  TAILCALL u.NAT6 

	NAT6  shift 82
	.  error


state 62
	mem:  LPAREN MEM.x n8 RPAREN 

	RCX  shift 35
	X  shift 46
	W  shift 30
	A  shift 33
	.  error

	w  goto 47
	x  goto 83
	a  goto 31
	sx  goto 34

state 63
	innerinstruction:  w ASSIGN s.    (9)

	.  reduce 9 (src line 79)


state 64
	innerinstruction:  w ASSIGN mem.    (10)

	.  reduce 10 (src line 84)


state 65
	innerinstruction:  w ASSIGN cmp_op.    (15)

	.  reduce 15 (src line 109)


state 66
	t:  x.    (29)
	s:  x.    (31)

	RPAREN  reduce 31 (src line 185)
	.  reduce 29 (src line 181)


state 67
	t:  num.    (30)
	s:  num.    (32)

	RPAREN  reduce 32 (src line 186)
	.  reduce 30 (src line 182)


state 68
	s:  label.    (33)

	.  reduce 33 (src line 187)


state 69
	innerinstruction:  w AOP t.    (12)

	.  reduce 12 (src line 94)


state 70
	innerinstruction:  w SOP sx.    (13)

	.  reduce 13 (src line 99)


state 71
	innerinstruction:  w SOP num.    (14)

	.  reduce 14 (src line 104)


state 72
	innerinstruction:  mem ASSIGN s.    (11)

	.  reduce 11 (src line 89)


state 73
	s:  x.    (31)

	.  reduce 31 (src line 185)


state 74
	s:  num.    (32)

	.  reduce 32 (src line 186)


state 75
	innerinstruction:  CJUMP cmp_op LABEL.LABEL 

	LABEL  shift 84
	.  error


state 76
	cmp_op:  t CMP.t 

	NEG  shift 49
	NAT  shift 48
	NAT6  shift 53
	N8  shift 51
	NEGN8  shift 52
	RCX  shift 35
	X  shift 46
	W  shift 30
	A  shift 33
	.  error

	w  goto 47
	t  goto 85
	x  goto 44
	a  goto 31
	sx  goto 34
	num  goto 45
	n8  goto 50

state 77
	innerinstruction:  CALL PRINT NAT6.    (18)

	.  reduce 18 (src line 123)


state 78
	innerinstruction:  CALL READ NAT6.    (19)

	.  reduce 19 (src line 128)


state 79
	innerinstruction:  CALL ALLOCATE NAT6.    (20)

	.  reduce 20 (src line 133)


state 80
	innerinstruction:  CALL ARRAYERROR NAT6.    (21)

	.  reduce 21 (src line 137)


state 81
	innerinstruction:  CALL u nat.    (22)

	.  reduce 22 (src line 141)


state 82
	innerinstruction:  TAILCALL u NAT6.    (23)

	.  reduce 23 (src line 149)


state 83
	mem:  LPAREN MEM x.n8 RPAREN 

	NAT6  shift 53
	N8  shift 51
	NEGN8  shift 52
	.  error

	n8  goto 86

state 84
	innerinstruction:  CJUMP cmp_op LABEL LABEL.    (17)

	.  reduce 17 (src line 118)


state 85
	cmp_op:  t CMP t.    (25)

	.  reduce 25 (src line 163)


state 86
	mem:  LPAREN MEM x n8.RPAREN 

	RPAREN  shift 87
	.  error


state 87
	mem:  LPAREN MEM x n8 RPAREN.    (26)

	.  reduce 26 (src line 169)


31 terminals, 20 nonterminals
51 grammar rules, 88/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
69 working sets used
memory: parser 92/30000
24 extra closures
118 shift entries, 3 exceptions
44 goto entries
34 entries saved by goto default
Optimizer space used: output 136/30000
136 table entries, 1 zero
maximum spread: 31, maximum offset: 83
